--- a/readme/3/Learning Python Week 04.ipynb
+++ b/readme/3/Learning Python Week 04.ipynb
@@ -2,53 +2,235 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello World\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(45) # number (integer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(45.6) #number (float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"ahmed's bag\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(\"123rh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hi\",123+6,45.889)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(12.3,45,6.79,sep=\"***\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello PIAIC\", end='\\t')\n",
+    "print(\"Hi\", end='\\t')\n",
+    "print(\"None\", end='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(str(2)+\" hELLO\") # TYPE CASTING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name= \"Muzzammil\"\n",
+    "age= \"19\"\n",
+    "print(\"my name is \"+ name+ \" and my age is \" + age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"my name is {1} and my age is {0}.\".format(name,age))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"my name is {name} and my age is {age}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(5*\"Hello \"*4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=10\n",
+    "b=4900\n",
+    "c=a/b\n",
+    "print(c)\n",
+    "round(c,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=False\n",
+    "type(a)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# case change lower == small\n",
+    "user_cnic = (input(\"Do you have CNIC? \").lower())\n",
+    "if user_cnic == 'yes' or 'yeah':\n",
+    "    print(\"He has valid CNIC\")\n",
+    "    voter_list = (input(\"Is your name in the list?\").lower())\n",
+    "    if voter_list == 'yes':\n",
+    "        print(\"You are a registered voter\")\n",
+    "        print(\"You can cast vote\")\n",
+    "    else:\n",
+    "        print(\"Sorry! You cannot cast Vote!\")\n",
+    "else:\n",
+    "    print(\"You cannot cast Vote!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = (input(\"Is your age above 18? \").lower())\n",
+    "if age == 'yes':\n",
+    "    print(\"Welcome!\")\n",
+    "    ticket = (input(\"Do you have the Ticket?\").lower())\n",
+    "    if ticket == 'yes':\n",
+    "        print(\"Enjoy the show sir!\")\n",
+    "    else: \n",
+    "        print(\"Sorry!\")\n",
+    "else:\n",
+    "    print(\"Sorry!\")\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.6\n"
+      "What's your age? 19\n",
+      "Welcome!\n",
+      "Do you have the Ticket?yes\n",
+      "Enjoy the show sir!\n"
      ]
     }
    ],
    "source": [
-    "print(45.6) #number (float)"
+    "age = int(input(\"What's your age? \"))\n",
+    "if age >= 18:\n",
+    "    print(\"Welcome!\")\n",
+    "    ticket = (input(\"Do you have the Ticket?\").lower())\n",
+    "    if ticket == 'yes':\n",
+    "        print(\"Enjoy the show sir!\")\n",
+    "    else: \n",
+    "        print(\"Sorry!\")\n",
+    "else:\n",
+    "    print(\"Sorry!\")"
    ]
   },
   {
@@ -60,266 +242,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ahmed's bag\n"
+      "Enter a number!0\n",
+      "Enter another number!0\n",
+      "0 is equal to 0.\n"
      ]
     }
    ],
    "source": [
-    "print(\"ahmed's bag\")"
+    "num1 = int(input(\"Enter a number!\"))\n",
+    "num2 = int(input(\"Enter another number!\"))\n",
+    "if num1>num2:\n",
+    "    print(f\"{num1} is greater than {num2}.\")\n",
+    "elif num1==num2:\n",
+    "        print(f\"{num1} is equal to {num2}.\")\n",
+    "elif num1<num2:\n",
+    "        print(f\"{num1} is less than {num2}.\")\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(\"123rh\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi 129 45.889\n"
+      "Do you have CNIC? yes\n",
+      "Is your name in the list?yes\n",
+      "You can cast vote\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hi\",123+6,45.889)"
+    "user_cnic = (input(\"Do you have CNIC? \").lower())\n",
+    "voter_list = (input(\"Is your name in the list?\").lower())\n",
+    "if user_cnic == 'yes' and voter_list == 'yes':\n",
+    "    print(\"You can cast vote\")\n",
+    "else:\n",
+    "    print(\"You cannot cast Vote!\")\n",
+    "\n",
+    "\n",
+    "# mawdxiwadmn\n",
+    "# bczdcbnjzdncjnz\n",
+    "#xsnknSn\n",
+    "# ncsjnlsNZcJSNj\n",
+    "# jscnZJNjZS\n",
+    "# kcmKLncjznd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.3***45***6.79\n"
+      "Enter a number!9\n",
+      "Enter another number!10\n",
+      "9 is less than 10.\n"
      ]
     }
    ],
    "source": [
-    "print(12.3,45,6.79,sep=\"***\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello PIAIC\tHi\tNone\t"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello PIAIC\", end='\\t')\n",
-    "print(\"Hi\", end='\\t')\n",
-    "print(\"None\", end='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 hELLO\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(str(2)+\" hELLO\") # TYPE CASTING"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my name is Muzzammil and my age is 19\n"
-     ]
-    }
-   ],
-   "source": [
-    "name= \"Muzzammil\"\n",
-    "age= \"19\"\n",
-    "print(\"my name is \"+ name+ \" and my age is \" + age)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my name is 19 and my age is Muzzammil.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"my name is {1} and my age is {0}.\".format(name,age))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my name is Muzzammil and my age is 19.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"my name is {name} and my age is {age}.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'false' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-63b615c3fb4e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mfalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'false' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "a= false"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(5*\"Hello \"*4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0020408163265306124\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.002"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=10\n",
-    "b=4900\n",
-    "c=a/b\n",
-    "print(c)\n",
-    "round(c,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bool"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=False\n",
-    "type(a)\n",
-    "\n"
+    "num1 = int(input(\"Enter a number!\"))\n",
+    "num2 = int(input(\"Enter another number!\"))\n",
+    "if num1>num2:\n",
+    "    print(f\"{num1} is greater than {num2}.\") \n",
+    "elif num1==num2:    \n",
+    "    print(f\"{num1} is equal to {num2}.\") \n",
+    "elif num1<num2:\n",
+    "    print(f\"{num1} is less than {num2}.\")"
    ]
   },
   {
